--- a/SimpleShooter.vcxproj
+++ b/SimpleShooter.vcxproj
@@ -126,51 +126,45 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(ProjectDir)$(Platform)\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(ProjectDir)Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <ReferencePath>$(GameEngineDir)/Source;$(ReferencePath)</ReferencePath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(ProjectDir)Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(ProjectDir)Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <ReferencePath>$(GameEngineDir)/Source;$(ReferencePath)</ReferencePath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(ProjectDir)Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <ReferencePath>$(GameEngineDir)/Source;$(ReferencePath)</ReferencePath>
     <LibraryPath>$(ProjectDir)$(Platform)\Release;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(ProjectDir)Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <ReferencePath>$(GameEngineDir)/Source;$(ReferencePath)</ReferencePath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)x64\Debug;$(LibraryPath)</LibraryPath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
-    <ReferencePath>$(GameEngineDir)/Source;$(VC_ReferencesPath_x64);</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public/Containers;$(GameEngineDir)/Source/Private/Containers;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(ProjectDir)Source;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(GameEngineDir)/Source/Public;$(GameEngineDir)/Source/Public/Core;$(GameEngineDir)/Source/Private;$(GameEngineDir)/Source/Private/Core;$(GameEngineDir)/Source/ThirdParty;$(IncludePath)</IncludePath>
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(ProjectDir)x64\Release;$(LibraryPath)</LibraryPath>
     <PublicIncludeDirectories>$(ProjectDir)Source;$(ProjectDir)Source\Private;$(ProjectDir)Source\Public;$(PublicIncludeDirectories)</PublicIncludeDirectories>
-    <ReferencePath>$(GameEngineDir)/Source;$(VC_ReferencesPath_x64);</ReferencePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -197,7 +191,7 @@
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\ $(SolutionDir)$(Platform)\$(Configuration)\ x86
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
 call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
@@ -233,7 +227,8 @@ call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngine
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\BuildActions\PostBuild\CopyDLLs.bat '$(GameEngineDir)' '$(ProjectDir)' ''</Command>
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
+call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
       <AdditionalDependencies>GameEngine.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -273,7 +268,7 @@ call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngine
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\ $(SolutionDir)$(Platform)\$(Configuration)\ x86
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
 call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
@@ -314,7 +309,8 @@ call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngine
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\BuildActions\PostBuild\CopyDLLs.bat '$(GameEngineDir)' '$(ProjectDir)' ''</Command>
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
+call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
       <AdditionalDependencies>GameEngine.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -350,7 +346,7 @@ call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngine
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\ $(SolutionDir)$(Platform)\$(Configuration)\ x64
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
 call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
@@ -397,7 +393,7 @@ call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngine
       <OutputManifestFile>$(IntDir)$(TargetName)$(TargetExt).embed.manifest</OutputManifestFile>
     </Manifest>
     <PostBuildEvent>
-      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\ $(SolutionDir)$(Platform)\$(Configuration)\ x64
+      <Command>call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyDLLs.bat $(GameEngineDir)\Libs\$(Platform)\$(Configuration)\ $(SolutionDir)$(Platform)\$(Configuration)\
 call $(GameEngineDir)\Scripts\BuildActions\PostBuild\CopyAssets.bat $(GameEngineDir)\Assets $(SolutionDir)$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
     <Lib>
